Azure-AKS-HTTP-Application-Routing/mysql-clusterip-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: usermgmt-mysql
spec:
  type: ClusterIP
  selector:
    app: usermgmt-mysql
  ports: 
    - port: 3306  
      targetPort: 3306 # This means we are going to use Pod IP
