Azure-AKS-HTTP-Application-Routing/Ingress-HTTPApplicationRouting-ExternalDNS.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    # Add ingress.class as addon-http-application-routing
    kubernetes.io/ingress.class: webapprouting.kubernetes.azure.com
spec:
  rules:
    - host: app1.cloudsaga.in # Add Application DNS name to be registered in DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-service

                port: 
                  number: 80
